--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,16 @@ android {
             versionNameSuffix ".forTesting"
         }
     }
+
+    sourceSets {
+        androidTest {
+            java.srcDirs += "src/sharedTestData/java"
+        }
+        test {
+            java.srcDirs += "src/sharedTestData/java"
+        }
+    }
+
 }
 
 dependencies {
