--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,7 @@ dependencies {
 
     //UI Automator
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+
+    //Fragment
+    debugImplementation 'androidx.fragment:fragment-testing:1.3.5'
 }
