--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:3.0.2"
+    debugImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 
     //Mockito
     testImplementation "org.mockito:mockito-core:3.11.0"
