--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,9 @@ dependencies {
 
     //Fragment
     debugImplementation 'androidx.fragment:fragment-testing:1.3.5'
+
+    //Coroutines
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+
 }
