--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:3.0.2"
     debugImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+
 
     //Mockito
     testImplementation "org.mockito:mockito-core:3.11.0"
